--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-12-01 Tue 22:35 -->
+<!-- 2020-12-01 Tue 22:38 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Portfolio</title>
@@ -223,90 +223,118 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org0428bdd">1. Indoor Automated Garden</a></li>
-<li><a href="#org641218e">2. Linux RICE (Github)</a>
+<li><a href="#org75acc11">1. Indoor Automated Garden</a></li>
+<li><a href="#org98148c7">2. Linux RICE (Github)</a>
 <ul>
-<li><a href="#orgccb7fad">2.1. Overview</a></li>
-<li><a href="#orga5989ab">2.2. Custom scripts</a>
+<li><a href="#org9884a52">2.1. Overview</a></li>
+<li><a href="#org12dde25">2.2. Custom scripts</a>
 <ul>
-<li><a href="#org89f5e85">2.2.1. Internationalization</a></li>
-<li><a href="#org34d5c9a">2.2.2. Backups</a></li>
-<li><a href="#org432a215">2.2.3. Reproducible builds</a></li>
+<li><a href="#org0cdfa1d">2.2.1. Internationalization</a></li>
+<li><a href="#orge8346ce">2.2.2. Backups</a></li>
+<li><a href="#org55f4e5c">2.2.3. Reproducible builds</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org8402159">3. Open Source Coding Projects</a>
+<li><a href="#orge610e51">3. Open Source Coding Projects</a>
 <ul>
-<li><a href="#org2ebdc70">3.1. Search Within Video (Github Website)</a></li>
-<li><a href="#org8a75b0e">3.2. Ray Tracer (Github)</a></li>
-<li><a href="#org6be6da5">3.3. Steganographic Encoder (Github)</a></li>
+<li><a href="#org7a935c8">3.1. Search Within Video (Github Website)</a></li>
+<li><a href="#orgf9f4d32">3.2. Ray Tracer (Github)</a></li>
+<li><a href="#orgb8a55fe">3.3. Steganographic Encoder (Github)</a></li>
 </ul>
 </li>
-<li><a href="#org3fc877a">4. Emacs Build (Github)</a>
+<li><a href="#org7763a2e">4. Emacs Build (Github)</a>
 <ul>
-<li><a href="#orgf1854d0">4.1. Measuring startup time</a></li>
-<li><a href="#orgf436aee">4.2. Emacs as window manager</a></li>
-<li><a href="#org9ba6e85">4.3. Org Mode</a></li>
-<li><a href="#org5f6e0a9">4.4. Latex dev environment and resume</a></li>
+<li><a href="#org32597ae">4.1. Measuring startup time</a></li>
+<li><a href="#org67eafd4">4.2. Emacs as window manager</a></li>
+<li><a href="#org4f33e19">4.3. Org Mode</a></li>
+<li><a href="#orgbf015bc">4.4. Latex dev environment and resume</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org0428bdd" class="outline-2">
-<h2 id="org0428bdd"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
+<div id="outline-container-org75acc11" class="outline-2">
+<h2 id="org75acc11"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 A year ago I my best friend's mom passed away. My friend had already moved out on her own, but wanted to hold onto her childhood apartment. So a year ago I moved into the Bronx after graduating from Recurse Center and college, so that she could keep her apartment in her name. I needed to reside in the city for my transgender services at Mount Sinai and brainstormed ways to create the garden of my dreams inside a northern exposure apartment in the middle of a food desert and green desert.
-<img src="./public/begining.JPG" alt="begining.JPG" />
-<img src="./public/automatedlights.JPG" alt="automatedlights.JPG" />
-<img src="./public/bellpepper.JPG" alt="bellpepper.JPG" />
-<img src="./public/constructingwatering1.JPG" alt="constructingwatering1.JPG" />
-<img src="./public/constructingwatering2.JPG" alt="constructingwatering2.JPG" />
-<img src="./public/graftedmulberry.JPG" alt="graftedmulberry.JPG" />
-<img src="./public/mulberry.JPG" alt="mulberry.JPG" />
+</p>
+
+<div id="org99afdc8" class="figure">
+<p><img src="./public/begining.JPG" alt="begining.JPG" />
+</p>
+</div>
+
+<div id="orgedfd040" class="figure">
+<p><img src="./public/automatedlights.JPG" alt="automatedlights.JPG" />
+</p>
+</div>
+
+<div id="org9d23a84" class="figure">
+<p><img src="./public/bellpepper.JPG" alt="bellpepper.JPG" />
+</p>
+</div>
+
+<div id="org9e5d15c" class="figure">
+<p><img src="./public/constructingwatering1.JPG" alt="constructingwatering1.JPG" />
+</p>
+</div>
+
+<div id="org45e9a2c" class="figure">
+<p><img src="./public/constructingwatering2.JPG" alt="constructingwatering2.JPG" />
+</p>
+</div>
+
+<div id="org7c65831" class="figure">
+<p><img src="./public/graftedmulberry.JPG" alt="graftedmulberry.JPG" />
+</p>
+</div>
+
+<div id="org2dff71f" class="figure">
+<p><img src="./public/mulberry.JPG" alt="mulberry.JPG" />
 </p>
 </div>
 </div>
+</div>
 
-<div id="outline-container-org641218e" class="outline-2">
-<h2 id="org641218e"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">(Github)</a></h2>
+<div id="outline-container-org98148c7" class="outline-2">
+<h2 id="org98148c7"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">(Github)</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 I run an Arch Linux with a completely customized userspace that has tight integration between emacs, terminal, and various unix  utilities
 <img src="./public/rice.png" alt="rice.png" />
 </p>
 </div>
-<div id="outline-container-orgccb7fad" class="outline-3">
-<h3 id="orgccb7fad"><span class="section-number-3">2.1</span> Overview</h3>
+<div id="outline-container-org9884a52" class="outline-3">
+<h3 id="org9884a52"><span class="section-number-3">2.1</span> Overview</h3>
 </div>
-<div id="outline-container-orga5989ab" class="outline-3">
-<h3 id="orga5989ab"><span class="section-number-3">2.2</span> Custom scripts</h3>
+<div id="outline-container-org12dde25" class="outline-3">
+<h3 id="org12dde25"><span class="section-number-3">2.2</span> Custom scripts</h3>
 <div class="outline-text-3" id="text-2-2">
 </div>
-<div id="outline-container-org89f5e85" class="outline-4">
-<h4 id="org89f5e85"><span class="section-number-4">2.2.1</span> Internationalization</h4>
+<div id="outline-container-org0cdfa1d" class="outline-4">
+<h4 id="org0cdfa1d"><span class="section-number-4">2.2.1</span> Internationalization</h4>
 </div>
-<div id="outline-container-org34d5c9a" class="outline-4">
-<h4 id="org34d5c9a"><span class="section-number-4">2.2.2</span> Backups</h4>
+<div id="outline-container-orge8346ce" class="outline-4">
+<h4 id="orge8346ce"><span class="section-number-4">2.2.2</span> Backups</h4>
 </div>
-<div id="outline-container-org432a215" class="outline-4">
-<h4 id="org432a215"><span class="section-number-4">2.2.3</span> Reproducible builds</h4>
+<div id="outline-container-org55f4e5c" class="outline-4">
+<h4 id="org55f4e5c"><span class="section-number-4">2.2.3</span> Reproducible builds</h4>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org8402159" class="outline-2">
-<h2 id="org8402159"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
+<div id="outline-container-orge610e51" class="outline-2">
+<h2 id="orge610e51"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Open source is incredibly important to me, and I make every piece of software I write open souce and freely liscenced. Below are three of my favorite projects I've written over the last few years.
 </p>
 </div>
-<div id="outline-container-org2ebdc70" class="outline-3">
-<h3 id="org2ebdc70"><span class="section-number-3">3.1</span> Search Within Video (<a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a>)</h3>
+<div id="outline-container-org7a935c8" class="outline-3">
+<h3 id="org7a935c8"><span class="section-number-3">3.1</span> Search Within Video (<a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a>)</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 Search Within Video allows you to upload a video or provide a youtube url that is downloaded and analyzed using OpenCV to see which frames are statistically most unique. These frames are then uploaded to an open source image classifier, and the results are returned to the user in the form of a searchable video. The user can search for an object such as "Dog" and the video will load the timestamp of any dog occurence.
@@ -317,28 +345,32 @@ This project has a microservice architecture and runs the video parser and image
 </p>
 </div>
 </div>
-<div id="outline-container-org8a75b0e" class="outline-3">
-<h3 id="org8a75b0e"><span class="section-number-3">3.2</span> Ray Tracer (<a href="https://github.com/bcmertz/ray-tracer">Github</a>)</h3>
+<div id="outline-container-orgf9f4d32" class="outline-3">
+<h3 id="orgf9f4d32"><span class="section-number-3">3.2</span> Ray Tracer (<a href="https://github.com/bcmertz/ray-tracer">Github</a>)</h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
 <a href="./public/ray-tracer.ppm">./public/ray-tracer.ppm</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org6be6da5" class="outline-3">
-<h3 id="org6be6da5"><span class="section-number-3">3.3</span> Steganographic Encoder (<a href="https://github.com/bcmertz/steganographic-encoder">Github</a>)</h3>
+<div id="outline-container-orgb8a55fe" class="outline-3">
+<h3 id="orgb8a55fe"><span class="section-number-3">3.3</span> Steganographic Encoder (<a href="https://github.com/bcmertz/steganographic-encoder">Github</a>)</h3>
 </div>
 </div>
-<div id="outline-container-org3fc877a" class="outline-2">
-<h2 id="org3fc877a"><span class="section-number-2">4</span> Emacs Build (<a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a>)</h2>
+<div id="outline-container-org7763a2e" class="outline-2">
+<h2 id="org7763a2e"><span class="section-number-2">4</span> Emacs Build (<a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a>)</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Emacs is the ideal extensible editor for all types of plain text, including code and latex. My custom build includes support for many useful tools including vim emulation, email, autocompletion, compilation, and many tweaks that make windowing inside of emacs work like it does in my window manager of choice i3. My custom build features 8 language configurations and 14 general purpose modules that configure everything from git support to editing
-<img src="./public/emacs-org-mode.png" alt="emacs-org-mode.png" />
+</p>
+
+<div id="orgb84b7cd" class="figure">
+<p><img src="./public/emacs-org-mode.png" alt="emacs-org-mode.png" />
 </p>
 </div>
-<div id="outline-container-orgf1854d0" class="outline-3">
-<h3 id="orgf1854d0"><span class="section-number-3">4.1</span> Measuring startup time</h3>
+</div>
+<div id="outline-container-org32597ae" class="outline-3">
+<h3 id="org32597ae"><span class="section-number-3">4.1</span> Measuring startup time</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Startup performance of my custom build is monitored very closely. <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/init.el#L22-L27">Here</a> I implement a module timer to track perfomance / load time of each custom module.
@@ -355,8 +387,8 @@ Startup performance of my custom build is monitored very closely. <a href="https
 </div>
 </div>
 
-<div id="outline-container-orgf436aee" class="outline-3">
-<h3 id="orgf436aee"><span class="section-number-3">4.2</span> Emacs as window manager</h3>
+<div id="outline-container-org67eafd4" class="outline-3">
+<h3 id="org67eafd4"><span class="section-number-3">4.2</span> Emacs as window manager</h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Emacs is very nearly an entire OS in it's own right. I use it as my window manager while programming for a distraction free environment tightly configured with multi-language integration.
@@ -375,8 +407,8 @@ Emacs is very nearly an entire OS in it's own right. I use it as my window manag
 </div>
 </div>
 
-<div id="outline-container-org9ba6e85" class="outline-3">
-<h3 id="org9ba6e85"><span class="section-number-3">4.3</span> Org Mode</h3>
+<div id="outline-container-org4f33e19" class="outline-3">
+<h3 id="org4f33e19"><span class="section-number-3">4.3</span> Org Mode</h3>
 <div class="outline-text-3" id="text-4-3">
 <p>
 This portfolio is written in an org document and exported to html, to see the original org text go <a href="https://github.com/bcmertz/bcmertz.github.io/blob/master/index.org">here</a>
@@ -387,20 +419,24 @@ I use org mode to track my list of todo items, and have built in functionality l
 </p>
 </div>
 </div>
-<div id="outline-container-org5f6e0a9" class="outline-3">
-<h3 id="org5f6e0a9"><span class="section-number-3">4.4</span> Latex dev environment and resume</h3>
+<div id="outline-container-orgbf015bc" class="outline-3">
+<h3 id="orgbf015bc"><span class="section-number-3">4.4</span> Latex dev environment and resume</h3>
 <div class="outline-text-3" id="text-4-4">
 <p>
 Within emacs I have setup a dev environment for editing <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/lisp/languages/custom-latex.el">latex</a> with automatic compilation to pdf. Checkout my <a href="https://github.com/bcmertz/resume/blob/master/resume.pdf">resume</a> written in Latex.
-<img src="./public/emacs-resume.png" alt="emacs-resume.png" />
 </p>
+
+<div id="orgde18146" class="figure">
+<p><img src="./public/emacs-resume.png" alt="emacs-resume.png" />
+</p>
+</div>
 </div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Bennett Mertz</p>
-<p class="date">Created: 2020-12-01 Tue 22:35</p>
+<p class="date">Created: 2020-12-01 Tue 22:38</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
