--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-12-01 Tue 22:38 -->
+<!-- 2020-12-02 Wed 02:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Portfolio</title>
@@ -223,121 +223,111 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org75acc11">1. Indoor Automated Garden</a></li>
-<li><a href="#org98148c7">2. Linux RICE (Github)</a>
+<li><a href="#orgf755fef">1. Indoor Automated Garden</a></li>
+<li><a href="#org868d16e">2. Linux RICE (Github)</a>
 <ul>
-<li><a href="#org9884a52">2.1. Overview</a></li>
-<li><a href="#org12dde25">2.2. Custom scripts</a>
-<ul>
-<li><a href="#org0cdfa1d">2.2.1. Internationalization</a></li>
-<li><a href="#orge8346ce">2.2.2. Backups</a></li>
-<li><a href="#org55f4e5c">2.2.3. Reproducible builds</a></li>
+<li><a href="#org6cbca67">2.1. Overview</a></li>
 </ul>
 </li>
+<li><a href="#org2d128b3">3. Open Source Coding Projects</a>
+<ul>
+<li><a href="#org7282263">3.1. Search Within Video (Github Website)</a></li>
+<li><a href="#orga10a8cb">3.2. Ray Tracer (Github)</a></li>
+<li><a href="#orga28b9ed">3.3. Steganographic Encoder (Github)</a></li>
 </ul>
 </li>
-<li><a href="#orge610e51">3. Open Source Coding Projects</a>
+<li><a href="#org450f7ca">4. Emacs Build (Github)</a>
 <ul>
-<li><a href="#org7a935c8">3.1. Search Within Video (Github Website)</a></li>
-<li><a href="#orgf9f4d32">3.2. Ray Tracer (Github)</a></li>
-<li><a href="#orgb8a55fe">3.3. Steganographic Encoder (Github)</a></li>
-</ul>
-</li>
-<li><a href="#org7763a2e">4. Emacs Build (Github)</a>
-<ul>
-<li><a href="#org32597ae">4.1. Measuring startup time</a></li>
-<li><a href="#org67eafd4">4.2. Emacs as window manager</a></li>
-<li><a href="#org4f33e19">4.3. Org Mode</a></li>
-<li><a href="#orgbf015bc">4.4. Latex dev environment and resume</a></li>
+<li><a href="#orge6b3c9f">4.1. Measuring startup time</a></li>
+<li><a href="#org40bb3df">4.2. Emacs as window manager</a></li>
+<li><a href="#orgfc878d7">4.3. Org Mode</a></li>
+<li><a href="#org0e67eda">4.4. Latex dev environment and resume</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org75acc11" class="outline-2">
-<h2 id="org75acc11"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
+<div id="outline-container-orgf755fef" class="outline-2">
+<h2 id="orgf755fef"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-A year ago I my best friend's mom passed away. My friend had already moved out on her own, but wanted to hold onto her childhood apartment. So a year ago I moved into the Bronx after graduating from Recurse Center and college, so that she could keep her apartment in her name. I needed to reside in the city for my transgender services at Mount Sinai and brainstormed ways to create the garden of my dreams inside a northern exposure apartment in the middle of a food desert and green desert.
+A year ago my best friend's mom passed away. My friend had already moved out on her own, but wanted to hold onto her childhood apartment. So I moved into the Bronx after graduating from Recurse Center and college, so that she could keep her apartment in her name. I wanted to have a garden but needed to reside in the city for my transgender services at Mount Sinai and brainstormed ways to create the garden of my dreams inside a northern exposure apartment in the middle of a food desert and green desert.
 </p>
 
-<div id="org99afdc8" class="figure">
-<p><img src="./public/begining.JPG" alt="begining.JPG" />
-</p>
-</div>
 
-<div id="orgedfd040" class="figure">
-<p><img src="./public/automatedlights.JPG" alt="automatedlights.JPG" />
+<p>
+My garden started humbly with some led grow lights and two little ghost pepper plants. I took the last shelf off my book shelf and hung the lights.
+<img src="./public/begining.JPG" alt="begining.JPG" />
 </p>
-</div>
 
-<div id="org9d23a84" class="figure">
-<p><img src="./public/bellpepper.JPG" alt="bellpepper.JPG" />
+<p>
+Soon I added in an arduino controlled relay (in the box) to turn the lights on and off at set times each day. The program controlling it was simply doing a delay() for 12 hours. Not the most robust system, and it reset the program timer anytime the power reset, which was frequent with storms and sloppy cord management :)
+s<img src="./public/automatedlights.JPG" alt="automatedlights.JPG" />
 </p>
-</div>
 
-<div id="org9e5d15c" class="figure">
-<p><img src="./public/constructingwatering1.JPG" alt="constructingwatering1.JPG" />
+
+<p>
+A bell pepper coming in! By this point I added in a rtc<sub>ds1307</sub> real time clock to keep a battery powered time store that wouldn't reset in the case of power failures as the simple arduino program I wrote would.
+<img src="./public/bellpepper.JPG" alt="bellpepper.JPG" />
 </p>
-</div>
 
-<div id="org45e9a2c" class="figure">
-<p><img src="./public/constructingwatering2.JPG" alt="constructingwatering2.JPG" />
+<p>
+Next I added in watering, using an old paint bucket and a step drill bit I fit a hose connector to the bucket. This proved to be leaky and was eventually replaced with a proper gasget.
+<img src="./public/constructingwatering1.JPG" alt="constructingwatering1.JPG" />
 </p>
-</div>
 
-<div id="org7c65831" class="figure">
-<p><img src="./public/graftedmulberry.JPG" alt="graftedmulberry.JPG" />
+<p>
+Pictured are my two black mulberry cuttings which sent out roots :)
+<img src="./public/graftedmulberry.JPG" alt="graftedmulberry.JPG" />
 </p>
-</div>
 
-<div id="org2dff71f" class="figure">
-<p><img src="./public/mulberry.JPG" alt="mulberry.JPG" />
+<p>
+Here is my white mulberry grown from seeds taken on my street, just like in Iran!
+<img src="./public/mulberry.JPG" alt="mulberry.JPG" />
 </p>
 </div>
 </div>
-</div>
 
-<div id="outline-container-org98148c7" class="outline-2">
-<h2 id="org98148c7"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">(Github)</a></h2>
+<div id="outline-container-org868d16e" class="outline-2">
+<h2 id="org868d16e"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">(Github)</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
-I run an Arch Linux with a completely customized userspace that has tight integration between emacs, terminal, and various unix  utilities
+I run Arch Linux with a completely customized userspace that has tight integration and command keystroke parity between emacs, terminal, and various unix utilities. Pictured below is my i3 wm setup
 <img src="./public/rice.png" alt="rice.png" />
 </p>
 </div>
-<div id="outline-container-org9884a52" class="outline-3">
-<h3 id="org9884a52"><span class="section-number-3">2.1</span> Overview</h3>
-</div>
-<div id="outline-container-org12dde25" class="outline-3">
-<h3 id="org12dde25"><span class="section-number-3">2.2</span> Custom scripts</h3>
-<div class="outline-text-3" id="text-2-2">
-</div>
-<div id="outline-container-org0cdfa1d" class="outline-4">
-<h4 id="org0cdfa1d"><span class="section-number-4">2.2.1</span> Internationalization</h4>
-</div>
-<div id="outline-container-orge8346ce" class="outline-4">
-<h4 id="orge8346ce"><span class="section-number-4">2.2.2</span> Backups</h4>
-</div>
-<div id="outline-container-org55f4e5c" class="outline-4">
-<h4 id="org55f4e5c"><span class="section-number-4">2.2.3</span> Reproducible builds</h4>
+<div id="outline-container-org6cbca67" class="outline-3">
+<h3 id="org6cbca67"><span class="section-number-3">2.1</span> Overview</h3>
+<div class="outline-text-3" id="text-2-1">
+<p>
+There is too much to cover but here are links to some of the important areas of code and scripts I've written
+</p>
+<ul class="org-ul">
+<li><a href="https://github.com/bcmertz/dotfiles/blob/master/.local/bin/dmenu/choose_keyboard">Internationalization</a> - this script queries the installed keyboards and sets a toggle-able keyboard with the default en keyboard</li>
+<li><a href="https://github.com/bcmertz/dotfiles/blob/master/.local/bin/cron/setbg">Set Background</a> - this script is run as a cron job to change the wallpaper every hour to a random wallpaper. If invoked manually you can pass the -s flag to keep the wallpaper the same. Additionally you can pass a wallpaper name to choose specifically which wallpaper is desired.</li>
+<li><a href="https://github.com/bcmertz/dotfiles/blob/master/.local/bin/setup/backuppass">Passwords &amp; GPG Keys</a> - this script backs up encrypted passwords and GPG keys and <a href="https://github.com/bcmertz/dotfiles/blob/master/.local/bin/setup/setuppass">this script</a> clones them to a new/broken machine</li>
+<li><a href="https://github.com/bcmertz/dotfiles/blob/master/.local/bin/killport">Kill Port utility</a> - to kill whatever process is runnign on a specific port. Very useful when node bugs out</li>
+<li><a href="https://github.com/bcmertz/dotfiles/blob/master/.local/bin/git_alias">Git alias</a> - this utility allows me to use git commands in my home folder as it is version controlled as a bare git repository. This means all my dotfiles are always version controlled without any fancy scripts or tools, just git</li>
+<li><a href="https://github.com/bcmertz/dotfiles/blob/master/.xprofile">Startup applications</a>: this runs when Xorg starts up and checks to see which DE/WM is being used and starts the appropriate applications</li>
+<li><a href="https://github.com/bcmertz/dotfiles/blob/master/.profile#L24-L57">Here we choose the session window manager and pass the info</a> to .xinitrc which sets the SESSION environmental variable used elsewhere</li>
+</ul>
 </div>
 </div>
 </div>
 
-<div id="outline-container-orge610e51" class="outline-2">
-<h2 id="orge610e51"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
+<div id="outline-container-org2d128b3" class="outline-2">
+<h2 id="org2d128b3"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Open source is incredibly important to me, and I make every piece of software I write open souce and freely liscenced. Below are three of my favorite projects I've written over the last few years.
 </p>
 </div>
-<div id="outline-container-org7a935c8" class="outline-3">
-<h3 id="org7a935c8"><span class="section-number-3">3.1</span> Search Within Video (<a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a>)</h3>
+<div id="outline-container-org7282263" class="outline-3">
+<h3 id="org7282263"><span class="section-number-3">3.1</span> Search Within Video (<a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a>)</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
-Search Within Video allows you to upload a video or provide a youtube url that is downloaded and analyzed using OpenCV to see which frames are statistically most unique. These frames are then uploaded to an open source image classifier, and the results are returned to the user in the form of a searchable video. The user can search for an object such as "Dog" and the video will load the timestamp of any dog occurence.
+Search Within Video allows you to upload a video or provide a youtube url that is downloaded and analyzed using OpenCV to see which frames are statistically most unique based off of mean squared error comparisons to the previous frame. These unique frames are then uploaded to an open source image classifier, and the results are returned to the user in the form of a searchable video. The user can search for an object such as "dog" and the video will load the timestamp of any dog occurence.
 </p>
 
 <p>
@@ -345,32 +335,34 @@ This project has a microservice architecture and runs the video parser and image
 </p>
 </div>
 </div>
-<div id="outline-container-orgf9f4d32" class="outline-3">
-<h3 id="orgf9f4d32"><span class="section-number-3">3.2</span> Ray Tracer (<a href="https://github.com/bcmertz/ray-tracer">Github</a>)</h3>
+<div id="outline-container-orga10a8cb" class="outline-3">
+<h3 id="orga10a8cb"><span class="section-number-3">3.2</span> Ray Tracer (<a href="https://github.com/bcmertz/ray-tracer">Github</a>)</h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
+Pictured below is the sample output from my ray tracer. It can render shapes at different depths, with variable lighting and backgrounds. Shadows don't work properly but there should be support soon.
 <a href="./public/ray-tracer.ppm">./public/ray-tracer.ppm</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgb8a55fe" class="outline-3">
-<h3 id="orgb8a55fe"><span class="section-number-3">3.3</span> Steganographic Encoder (<a href="https://github.com/bcmertz/steganographic-encoder">Github</a>)</h3>
+<div id="outline-container-orga28b9ed" class="outline-3">
+<h3 id="orga28b9ed"><span class="section-number-3">3.3</span> Steganographic Encoder (<a href="https://github.com/bcmertz/steganographic-encoder">Github</a>)</h3>
+<div class="outline-text-3" id="text-3-3">
+<p>
+This project somewhat sloppily hides messages and decodes them from pictures using least significant bit manipulation.
+</p>
 </div>
 </div>
-<div id="outline-container-org7763a2e" class="outline-2">
-<h2 id="org7763a2e"><span class="section-number-2">4</span> Emacs Build (<a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a>)</h2>
+</div>
+<div id="outline-container-org450f7ca" class="outline-2">
+<h2 id="org450f7ca"><span class="section-number-2">4</span> Emacs Build (<a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a>)</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Emacs is the ideal extensible editor for all types of plain text, including code and latex. My custom build includes support for many useful tools including vim emulation, email, autocompletion, compilation, and many tweaks that make windowing inside of emacs work like it does in my window manager of choice i3. My custom build features 8 language configurations and 14 general purpose modules that configure everything from git support to editing
-</p>
-
-<div id="orgb84b7cd" class="figure">
-<p><img src="./public/emacs-org-mode.png" alt="emacs-org-mode.png" />
+<img src="./public/emacs-org-mode.png" alt="emacs-org-mode.png" />
 </p>
 </div>
-</div>
-<div id="outline-container-org32597ae" class="outline-3">
-<h3 id="org32597ae"><span class="section-number-3">4.1</span> Measuring startup time</h3>
+<div id="outline-container-orge6b3c9f" class="outline-3">
+<h3 id="orge6b3c9f"><span class="section-number-3">4.1</span> Measuring startup time</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Startup performance of my custom build is monitored very closely. <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/init.el#L22-L27">Here</a> I implement a module timer to track perfomance / load time of each custom module.
@@ -387,8 +379,8 @@ Startup performance of my custom build is monitored very closely. <a href="https
 </div>
 </div>
 
-<div id="outline-container-org67eafd4" class="outline-3">
-<h3 id="org67eafd4"><span class="section-number-3">4.2</span> Emacs as window manager</h3>
+<div id="outline-container-org40bb3df" class="outline-3">
+<h3 id="org40bb3df"><span class="section-number-3">4.2</span> Emacs as window manager</h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Emacs is very nearly an entire OS in it's own right. I use it as my window manager while programming for a distraction free environment tightly configured with multi-language integration.
@@ -407,8 +399,8 @@ Emacs is very nearly an entire OS in it's own right. I use it as my window manag
 </div>
 </div>
 
-<div id="outline-container-org4f33e19" class="outline-3">
-<h3 id="org4f33e19"><span class="section-number-3">4.3</span> Org Mode</h3>
+<div id="outline-container-orgfc878d7" class="outline-3">
+<h3 id="orgfc878d7"><span class="section-number-3">4.3</span> Org Mode</h3>
 <div class="outline-text-3" id="text-4-3">
 <p>
 This portfolio is written in an org document and exported to html, to see the original org text go <a href="https://github.com/bcmertz/bcmertz.github.io/blob/master/index.org">here</a>
@@ -419,24 +411,20 @@ I use org mode to track my list of todo items, and have built in functionality l
 </p>
 </div>
 </div>
-<div id="outline-container-orgbf015bc" class="outline-3">
-<h3 id="orgbf015bc"><span class="section-number-3">4.4</span> Latex dev environment and resume</h3>
+<div id="outline-container-org0e67eda" class="outline-3">
+<h3 id="org0e67eda"><span class="section-number-3">4.4</span> Latex dev environment and resume</h3>
 <div class="outline-text-3" id="text-4-4">
 <p>
 Within emacs I have setup a dev environment for editing <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/lisp/languages/custom-latex.el">latex</a> with automatic compilation to pdf. Checkout my <a href="https://github.com/bcmertz/resume/blob/master/resume.pdf">resume</a> written in Latex.
+<img src="./public/emacs-resume.png" alt="emacs-resume.png" />
 </p>
-
-<div id="orgde18146" class="figure">
-<p><img src="./public/emacs-resume.png" alt="emacs-resume.png" />
-</p>
-</div>
 </div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Bennett Mertz</p>
-<p class="date">Created: 2020-12-01 Tue 22:38</p>
+<p class="date">Created: 2020-12-02 Wed 02:12</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
